@startuml Attack Resources Struct

title Attack Resources Struct

class AttackData <<Resource>>{
    == Data ==
    + enum Type()
    + string lateralVelocitySnapshot
    + Type type
    + float damage
    + float delay
    + int maxLevel
}

class ProjectileData {
    == Data ==
    + PackedScene projectileObject
    + float projectileSpeed
}

class AreaOfEffectData {
    == Data ==
    + Mesh areaMesh
    + Shape3D areaColliderShape
    + float lvlUpAreaStepSize
}

AttackData <|-- ProjectileData
AttackData <|-- AreaOfEffectData

@enduml